style(styles.css/about page): fixed table alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -563,7 +563,7 @@ ul ul {
 }
 
 /*FUN FACTS TABLE LAYOUT AND ALIGNMENT*/ 
-#fun-facts {
+#fun-facts table{
     margin: 0 auto;          /* centers the table */
     border-collapse: collapse; 
     text-align: center;        /* centers text in cells */
